# opencl-homework

./: .gitignore  README.md
lab01/: CMakeLists.txt  input.txt
lab01/src/: conv.cl  main.cpp
lab02/: CMakeLists.txt  input.txt
lab02/src/: cl_environment.cpp  cl_environment.hpp  defer.hpp  main.cpp  scan.cl
